[gd_scene load_steps=3 format=3 uid="uid://bhbchgqecjgxk"]

[ext_resource type="Script" uid="uid://pgkwqr4qj73v" path="res://hud.gd" id="1_37p78"]
[ext_resource type="PackedScene" uid="uid://ybrko55rn3fe" path="res://inventory.tscn" id="2_64ctp"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_37p78")

[node name="Inventory" parent="." instance=ExtResource("2_64ctp")]
visible = false

[node name="BackgroundPanel" type="ColorRect" parent="."]
offset_top = 640.0
offset_right = 1080.0
offset_bottom = 720.0
color = Color(1, 1, 1, 0.81960785)

[node name="Money" type="Label" parent="."]
offset_left = 8.0
offset_top = 648.0
offset_right = 48.0
offset_bottom = 690.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "0"

[node name="SelectedFeature" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.22900002
anchor_top = 1.0380001
anchor_right = 0.23
anchor_bottom = 1.0380001
offset_left = -119.32002
offset_top = -99.36011
offset_right = -8.400024
offset_bottom = -50.360107
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="StationOptions" type="Node2D" parent="."]
position = Vector2(0, 640)

[node name="Track" type="Button" parent="StationOptions"]
offset_left = 536.0
offset_top = 8.0
offset_right = 664.0
offset_bottom = 39.0
text = "Start Track"

[node name="SurveyorButton" type="Button" parent="StationOptions"]
offset_left = 952.0
offset_top = 8.0
offset_right = 1071.0
offset_bottom = 39.0
text = "Surveyor (100)"

[node name="Tunnelling" type="Button" parent="StationOptions"]
offset_left = 752.0
offset_top = 42.0
offset_right = 883.0
offset_bottom = 73.0
text = "Tunnelling (100)
"

[node name="Skills" type="Label" parent="StationOptions"]
offset_left = 696.0
offset_right = 744.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Skills"

[node name="Units" type="Label" parent="StationOptions"]
offset_left = 896.0
offset_right = 944.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Units"

[node name="Bridging" type="Button" parent="StationOptions"]
offset_left = 752.0
offset_top = 8.0
offset_right = 883.0
offset_bottom = 39.0
text = "Bridging (100)
"

[node name="Inventory" type="Button" parent="StationOptions"]
offset_left = 536.0
offset_top = 42.0
offset_right = 665.0
offset_bottom = 73.0
text = "Open Inventory"

[node name="MoneyRefresh" type="Timer" parent="."]
autostart = true

[connection signal="open_inventory" from="." to="Inventory" method="_on_open_inventory"]
[connection signal="pressed" from="StationOptions/Track" to="." method="_on_track_pressed"]
[connection signal="pressed" from="StationOptions/SurveyorButton" to="." method="_on_surveyor_button_pressed"]
[connection signal="pressed" from="StationOptions/Tunnelling" to="." method="_on_tunnelling_pressed"]
[connection signal="pressed" from="StationOptions/Inventory" to="." method="_on_inventory_pressed"]
[connection signal="timeout" from="MoneyRefresh" to="." method="_on_money_refresh_timeout"]
